<resources>
    <string name="Startup_screen_contract">By tapping the button below, you agree to our Terms and Privacy Policy</string>
    <string name="_1_enter_your_old_password_below">1. Enter your old password below</string>
    <string name="_1_meet_up_in_a_public_place_for_the_first_time_to_be_safe_when_meeting_new_people">1. Meet up in a public place for the first time to be safe when meeting new people.</string>
    <string name="_2_enter_your_new_password_below">2. Enter your new password below</string>
    <string name="_2_treat_people_with_respect_and_kindness_the_way_you_would_want_to_be_treated">2. Treat people with respect and kindness, the way you would want to be treated.</string>
    <string name="_3_confirm_your_new_password_below">3. Confirm your new password below</string>
    <string name="_3_if_you_can_t_quite_see_who_a_person_is_in_their_pictures_or_have_an_idea_that_something_might_be_wrong_just_swipe_left_to_be_safe">"3. If you can't quite see who a person is in their pictures or have an idea that something might be wrong, just swipe left to be safe."</string>
    <string name="_4_never_put_personal_information_in_your_bio">4. Never put personal information in your bio.</string>
    <string name="a_few_tips_before_you_get_started_to_protect_you">A few tips before you get started to protect you:</string>
    <string name="a_password_reset_link_has_been_sent_to_your_email">A password reset link has been sent to your email</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_cannot_be_recovered_after_deletion">Account cannot be recovered after deletion</string>
    <string name="account_was_not_found">Account was not found</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="add_a_new_location">Add a New Location</string>
    <string name="add_at_least_one_picture_below">Add at least one picture below</string>
    <string name="add_this_location">add this location</string>
    <string name="age_maximum">Age Maximum</string>
    <string name="age_minimum">Age Minimum</string>
    <string name="all_fields_must_be_filled_in">All fields must be filled in</string>
    <string name="alright_let_s_get_started">Alright let us get started</string>
    <string name="alright_let_s_get_to_it">Alright, let us get to it!</string>
    <string name="app_name">Chatpad</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete it?</string>
    <string name="are_you_sure_you_want_to_delete_this_picture">Are you sure you want to delete this picture</string>
    <string name="artwork_artist">Create art together (sculpting, painting, drawing, etc…)</string>
    <string name="at_least_one_picture">At least one picture must be added</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="back">&lt; Back</string>
    <string name="bio">Bio</string>
    <string name="bio_field_cant_be_empty">Bio field can not be empty</string>
    <string name="block_user">Block User</string>
    <string name="bolt">Bolt</string>
    <string name="bolt_flash">Bolt flash</string>
    <string name="bolt_flash_allows">Bolt flash allows you to have your profile card at the top of the list in every category for the duration selected!</string>
    <string name="both">Both</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="by_clicking_here">By tapping the button below, you agree to our Terms and Privacy Policy</string>
    <string name="by_tapping_yes_category_selector">By tapping yes you will select all categories to be shown to you (you can change this later in settings).</string>
    <string name="cancel">Cancel</string>
    <string name="canoeing">Go canoeing</string>
    <string name="change_background_color">Change Background Color</string>
    <string name="change_location">Change location</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="change_your_password_below">Change Your Password Below</string>
    <string name="change_your_pictures">Change Your Pictures</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charge_nine_nine_nine">You will be charged $9.99/month with the payment option you selected</string>
    <string name="charge_two_nine_nine">You will be charged $2.99/month with the payment option you selected</string>
    <string name="chat">Chat</string>
    <string name="chatpad_chatter">Chatpad Chatter</string>
    <string name="chatpad_extrovert">Chatpad Extrovert</string>
    <string name="chatpad_platinum">Chatpad Platinum</string>
    <string name="chatter_per_month">per month. This package comes with unlimited rewinds (a rewind is when you bring up the previous user if you want to look at them again).</string>
    <string name="choose_a_plan_below">Choose a plan below</string>
    <string name="choose_your_time_duration_below">Choose your time duration below</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="confirm_password">confirm password</string>
    <string name="continue_button">Continue</string>
    <string name="create_account">Create Account</string>
    <string name="done">Done</string>
    <string name="email">email</string>
    <string name="engineering_projects">Engineers (get together and make projects/prototypes)</string>
    <string name="enter_full_name">Enter your first and last name</string>
    <string name="enter_the_email_associated_with_this_account">Enter the email associated with this account</string>
    <string name="enter_the_phone_number_associated_with_this_account">Enter the phone number associated with this account</string>
    <string name="female">Female</string>
    <string name="film_production">Film production/animation</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="going_out_for_a_good_time">Going out for a good time</string>
    <string name="hiking">Hiking</string>
    <string name="keyword">keyword</string>
    <string name="leave_a_keyword">Leave a keyword and remember it just in case you forget your password</string>
    <string name="location_selected">Location selected:</string>
    <string name="location_selected_title">Location:</string>
    <string name="log_in">Login</string>
    <string name="male">Male</string>
    <string name="music_producing">Producing, music engineering, etc…</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="or">or</string>
    <string name="password">password</string>
    <string name="phone_number">phone number</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="programming_projects">Programming (get together and make software)</string>
    <string name="recent_locations">Recent locations:</string>
    <string name="shopping">Shopping</string>
    <string name="sports">Sports</string>
    <string name="studying">Study with other people</string>
    <string name="switch_to_current_location">Switch To Current Location</string>
    <string name="tap_here_to_enter_birth_date">Tap here to enter birth date</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="traveling">Traveling to different places</string>
    <string name="vehicles">Vehicles (cars, trucks, jets, etc…)</string>
    <string name="venting_frustration">I just want to vent frustration</string>
    <string name="verify_details_below">Verify Details Below</string>
    <string name="videogames">Video games</string>
    <string name="what_is_your_gender">What is your gender</string>
</resources>