<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/forgotPasswordScrollView" android:background="@drawable/main_gradient_bg_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:layout_gravity="start" android:id="@id/forgotPasswordBack" android:background="@drawable/white_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:onClick="onForgotPasswordBackClicked" />
        <TextView android:textSize="25.0sp" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/forgotPasswordTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/verify_details_below" />
        <TextView android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/forgotPasswordText1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/enter_the_email_associated_with_this_account" />
        <EditText android:id="@id/forgotPasswordEmail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/email" android:inputType="textEmailAddress" />
        <TextView android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/forgotPasswordText2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/enter_the_phone_number_associated_with_this_account" />
        <EditText android:id="@id/forgotPasswordPhoneNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/phone_number" android:inputType="phone" />
        <TextView android:textColor="@color/colorAccent" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/keyword" />
        <EditText android:id="@id/forgotPasswordSecurityKey" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/keyword" android:inputType="textPassword" />
        <Button android:textColor="@color/colorAccent" android:layout_gravity="center_horizontal" android:id="@id/forgotPasswordDone" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/done" android:onClick="onForgotPasswordDoneClicked" />
    </LinearLayout>
</ScrollView>