<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/changePasswordScrollView" android:background="@drawable/main_gradient_bg_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="@color/colorAccent" android:layout_gravity="start" android:id="@id/changePasswordBack" android:background="@drawable/white_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/back" android:onClick="onChangePasswordBackButtonClicked" />
        <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:layout_gravity="center_horizontal" android:id="@id/changePasswordTextTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/change_your_password_below" />
        <TextView android:textColor="@color/colorAccent" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/changePasswordText1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/_1_enter_your_old_password_below" />
        <EditText android:id="@id/changePasswordOldPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/old_password" android:inputType="textPassword" />
        <TextView android:textColor="@color/colorAccent" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/changePasswordText2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/_2_enter_your_new_password_below" />
        <EditText android:id="@id/changePasswordNewPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/new_password" android:inputType="textPassword" />
        <TextView android:textColor="@color/colorAccent" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/changePasswordText3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/_3_confirm_your_new_password_below" />
        <EditText android:id="@id/changePasswordConfirmPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/confirm_password" android:inputType="textPassword" />
        <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/changePasswordProgressBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
        <Button android:textColor="@color/colorAccent" android:layout_gravity="center" android:id="@id/changePasswordDone" android:background="@drawable/white_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/done" android:onClick="onChangePasswordDoneButtonClicked" />
    </LinearLayout>
</ScrollView>