<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/main_gradient_bg_2" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textStyle="bold" android:textColor="@color/colorAccent" android:layout_gravity="start" android:background="@drawable/white_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/back" android:onClick="onSafetyBackButtonClicked" />
    <TextView android:textSize="25.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/a_few_tips_before_you_get_started_to_protect_you" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/_1_meet_up_in_a_public_place_for_the_first_time_to_be_safe_when_meeting_new_people" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/_2_treat_people_with_respect_and_kindness_the_way_you_would_want_to_be_treated" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/_3_if_you_can_t_quite_see_who_a_person_is_in_their_pictures_or_have_an_idea_that_something_might_be_wrong_just_swipe_left_to_be_safe" />
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/_4_never_put_personal_information_in_your_bio" />
    <Button android:textStyle="bold" android:textColor="@color/colorAccent" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/alright_let_s_get_started" android:onClick="onSafetyContinueButtonClicked" />
</LinearLayout>