<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/termsAndPrivacyPolicyLayout" android:background="@drawable/main_gradient_bg_2" android:padding="16.0dip" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textColor="@color/colorAccent" android:id="@id/termsAndConditionsBack" android:background="@drawable/white_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/back" />
    <TextView android:textSize="25.0sp" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/termsAndPrivacyPolicyText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/terms_and_privacy_policy" />
    <Button android:textColor="@color/colorAccent" android:id="@id/termsAndConditionsButton" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:text="@string/terms_and_conditions" />
    <Button android:textColor="@color/colorAccent" android:id="@id/privacyPolicyButton" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/privacy_policy" />
</LinearLayout>