<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/loginLayout" android:background="@drawable/main_gradient_bg" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/button" android:background="@drawable/white_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:onClick="onLoginBackButtonClicked" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ProgressBar android:id="@id/login_progress" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/email_login_form" app:layout_constraintVertical_bias="0.177" style="?android:progressBarStyleLarge" />
    <LinearLayout android:orientation="vertical" android:id="@id/email_login_form" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/button" app:layout_constraintVertical_bias="0.19">
        <AutoCompleteTextView android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email" android:maxLines="1" android:inputType="textEmailAddress" />
        <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/password" android:maxLines="1" android:inputType="textPassword" />
        <Button android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/email_sign_in_button" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/log_in" android:onClick="onLoginClicked" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or" />
        <Button android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/create_acct_button_login" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/create_account" android:onClick="onCreateAcctButtonClicked" />
        <TextView android:textSize="18.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or" />
        <Button android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/loginScreenForgotPassword" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/forgot_password" android:onClick="onLoginForgotPasswordButtonClicked" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>