<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/nameSignUpLayout" android:background="@drawable/main_gradient_bg_2" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/nameSignUpBackButton" android:background="@drawable/white_border" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/back" android:onClick="onBackButtonClicked" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="30.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/nameSignUpTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/alright_let_s_get_to_it" app:layout_constraintTop_toTopOf="parent" />
    <EditText android:id="@id/nameEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:hint="@string/enter_full_name" android:maxLines="1" android:inputType="textPersonName" app:layout_constraintTop_toBottomOf="@id/nameSignUpTextView" />
    <TextView android:textSize="30.0sp" android:textColor="@color/colorAccent" android:gravity="center" android:id="@id/birthdateTextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/tap_here_to_enter_birth_date" android:maxLines="1" app:layout_constraintTop_toBottomOf="@id/nameEditText" />
    <Button android:textSize="25.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/nameSignUpContinueButton" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/continue_button" android:onClick="onContinueButtonClicked" app:layout_constraintTop_toBottomOf="@id/birthdateTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>