<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/main_gradient_bg_2" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/leave_a_keyword" />
    <EditText android:id="@id/signUpSecurityEditText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:hint="@string/keyword" android:inputType="textPassword" />
    <Button android:textSize="18.0sp" android:textStyle="bold" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/continue_button" android:onClick="onSignUpSecurityKeyContinue" />
</LinearLayout>