<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/main_gradient_bg_2" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="30.0sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/what_is_your_gender" />
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="#fffbff00" android:tag="0" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:text="@string/male" android:onClick="onGenderIdentityChoiceClicked" />
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="#fffbff00" android:tag="1" android:background="@drawable/white_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/female" android:onClick="onGenderIdentityChoiceClicked" />
        <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/genderIdentityProgressBar" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" />
    </LinearLayout>
</ScrollView>